# BifrostJSON

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
src/: CMakeLists.txt  PackConfig.json.in  bifrost_json.cpp  bifrost_json.h  bifrost_json_export.h  bifrost_json_runtime_exception.cpp  bifrost_json_runtime_exception.h  header_macros.h  json_to_bif_obj.cpp  json_to_bif_obj.h  parse_access_expr.cpp  parse_access_expr.h
src/compounds/: CMakeLists.txt  create_access_expr.json  get_with_access_expr.json  get_with_access_expr_internal.json  number_to_access_expr.json  read_json_cached.json  set_array_chaining_info.json  set_with_access_expr.json
src/resources/: CMakeLists.txt
src/resources/docs/: CMakeLists.txt  create_access_expr.md  get_with_access_expr.md  get_with_access_expr_internal.md  number_to_access_expr.md  read_json.md  read_json_cached.md  set_with_access_expr.md
